# Glamdring

./: CMakeLists.txt  README.md
Glamdring/: board.cpp  chess.h  compat.h  data.cpp  data.h  eval.cpp  main.cpp  move.cpp  movegen.cpp  opening_book.cpp  precomp.cpp  search.cpp  static_data.cpp  test.cpp  timeman.cpp  transposition_table.cpp  uci.cpp  utils.cpp
src/: board.cpp  chess.h  data.h  draw.cpp  eval.cpp  main.cpp  move.cpp  movegen.cpp  search.cpp  static_data.cpp  test.cpp  uci.cpp  utils.cpp
tools/: mvv_lva.py  psqt.py  zobrist_data_recalc.py
